--- a/Milestone-1/Module-4/card.html
+++ b/Milestone-1/Module-4/card.html
@@ -15,8 +15,50 @@
     <main>
         <section class="card-section">
             <h2>Our Products</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolor!</p>
+            <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolor!</p>
             <div class="card-container">
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
+                <div class="card">
+                    <img src="./assets/shoes.jpg" alt="Shoes">
+                    <h3>Premium Shoe</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum nihil molestias eos laborum nam sed commodi asperiores vitae aspernatur!</p>
+                    <button>Purchase now</button>
+                </div>
                 <div class="card">
                     <img src="./assets/shoes.jpg" alt="Shoes">
                     <h3>Premium Shoe</h3>
