Html Structure created

--- a/Milestone-1/Module-4/Practice/team.html
+++ b/Milestone-1/Module-4/Practice/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Card</title>
+    <link rel="stylesheet" href="team.css">
 </head>
 <body>
 
@@ -15,9 +16,13 @@
             <div class="team-container">
                 <div class="team">
 
-                    <img src="" alt="">
+                    <img src="team-1.jpg" alt="team-1">
+                    <h2>Alex kevin</h2>
+                    <h4>Frontend Developer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex, quos numquam amet laudantium tempore numquam amet laudantium tempore.</p>
                     
                 </div>
+            
             </div>
 
         </section>
