team card design completed

--- a/Milestone-1/Module-4/Practice/team.html
+++ b/Milestone-1/Module-4/Practice/team.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Card</title>
     <link rel="stylesheet" href="team.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,19 +14,79 @@
 
     <main>
         <section class="team-section">
-            <h2>Our Team Members</h2>
-            <p class="para">Meet our hard-working team members</p>
+            <h2 class="top">Our Team Members</h2>
+            <p class="para">Meet our hard-working & dedicated team members</p>
 
             <div class="team-container">
                 <div class="team">
 
-                    <img src="team-1.jpg" alt="team-1">
-                    <h2>Alex kevin</h2>
-                    <h4>Frontend Developer</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex, quos numquam amet laudantium tempore numquam amet laudantium tempore.</p>
-                    
+                    <img src="member-1.png" alt="team-1">
+                    <h2>Ethan Carter</h2>
+                    <h4>Full-Stack Developer</h4>
+                    <p>Builds scalable web applications using modern JavaScript frameworks and cloud technologies.</p>
+                    <div class="social-icons">
+                    <!-- Facebook -->
+                        <a href="https://facebook.com/username" target="_blank" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                        </a>
+
+                        <!-- Twitter -->
+                        <a href="https://twitter.com/username" target="_blank" class="social-icon twitter">
+                        <i class="fab fa-twitter"></i>
+                        </a>
+
+                        <!-- GitHub -->
+                        <a href="https://github.com/username" target="_blank" class="social-icon github">
+                        <i class="fab fa-github"></i>
+                        </a>
+                    </div>                   
                 </div>
-            
+                <div class="team">
+
+                    <img src="member-2.png" alt="team-1">
+                    <h2>Sophia Rodriguez</h2>
+                    <h4>UI/UX Designer</h4>
+                    <p>Creates intuitive user interfaces through research, prototyping and design principles.</p>
+                    <div class="social-icons">
+                    <!-- Facebook -->
+                        <a href="https://facebook.com/username" target="_blank" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                        </a>
+
+                        <!-- Twitter -->
+                        <a href="https://twitter.com/username" target="_blank" class="social-icon twitter">
+                        <i class="fab fa-twitter"></i>
+                        </a>
+
+                        <!-- GitHub -->
+                        <a href="https://github.com/username" target="_blank" class="social-icon github">
+                        <i class="fab fa-github"></i>
+                        </a>
+                    </div>                   
+                </div>
+                <div class="team">
+
+                    <img src="member-3.png" alt="team-1">
+                    <h2>Marcus Chen</h2>
+                    <h4>DevOps Engineer</h4>
+                    <p>Automates deployment pipelines and manages cloud infrastructure for optimal performance.</p>
+                    <div class="social-icons">
+                    <!-- Facebook -->
+                        <a href="https://facebook.com/username" target="_blank" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                        </a>
+
+                        <!-- Twitter -->
+                        <a href="https://twitter.com/username" target="_blank" class="social-icon twitter">
+                        <i class="fab fa-twitter"></i>
+                        </a>
+
+                        <!-- GitHub -->
+                        <a href="https://github.com/username" target="_blank" class="social-icon github">
+                        <i class="fab fa-github"></i>
+                        </a>
+                    </div>                   
+                </div>
             </div>
 
         </section>
