--- a/Milestone-2/Module-8/index.html
+++ b/Milestone-2/Module-8/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
 
-        <section id="banner">
+        <section id="banner" class="hide">
             <div class="banner-content">
                 <h2>Hi, I am</h2>
                 <h1>Nihal Uddin</h1>
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" >
         <div class="skills-container">
             <div class="section-heading">
                 <h2>What I do</h2>
