grid layout designed

--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -79,23 +79,23 @@
      </section>
 
      <!-- Great Tea Section -->
-     <section class="container mx-auto grid grid-cols-2 gap-3">
-        <div class="great-tea-left flex gap-4">
-            <div class="h-[100px] w-[100px] bg-purple-700"></div>
-            <div class="h-[100px] w-[100px] bg-purple-700"></div>
-            <div class="h-[100px] w-[100px] bg-purple-700"></div>
-            <div class="h-[100px] w-[100px] bg-purple-700"></div>
+     <section class="container mx-auto grid grid-cols-2 gap-3 mb-[90px]">
+        <div class="great-tea-left gap-4 grid grid-cols-2 grid-rows-3">
+            <div class="border border-indigo-900"></div>
+            <div class="border border-indigo-900 row-span-2"></div>
+            <div class="border border-indigo-900 row-span-2"></div>
+            <div class="border border-indigo-900"></div>
         </div>
 
         <div class="great-tea-right">
-            <h2 class="text-[45px] font-bold mb-5">Great Tea, Freshly Presented</h2>
+            <h2 class="text-[45px] font-bold mb-5">Great Tea, Freshly <br> Presented</h2>
             <p class="text-[#777777] mb-7.5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
 
             <h4 class="text-[20px] font-bold mb-2.5">Unique Taste</h4>
-            <p class="text-[#777777] mb-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <p class="text-[#777777] mb-5">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
 
             <h4 class="text-[20px] font-bold mb-2.5">Premium Quality</h4>
-            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
         </div>
      </section>
 </body>
