--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -79,12 +79,16 @@
      </section>
 
      <!-- Great Tea Section -->
-     <section class="container mx-auto grid grid-cols-2 gap-3 mb-[90px]">
-        <div class="great-tea-left gap-4 grid grid-cols-2 grid-rows-3">
-            <div class="border border-indigo-900"></div>
-            <div class="border border-indigo-900 row-span-2"></div>
-            <div class="border border-indigo-900 row-span-2"></div>
-            <div class="border border-indigo-900"></div>
+     <section class="container mx-auto grid grid-cols-2 gap-8 mb-[90px]">
+        <div class="great-tea-left gap-7.5 grid grid-cols-2 grid-rows-3">
+            <div class="bg-linear-to-r from-[#ff0000] to-[#ff8938] opacity-10 rounded-md"></div>
+            <div class=" row-span-2 flex justify-center items-center bg-[#e6a6231a] rounded-md">
+                <img src="./assets/images/fresh-1.png" alt="">
+            </div>
+            <div class=" row-span-2 flex justify-center items-center bg-[#5776391a] rounded-md">
+                <img src="./assets/images/fresh-2.png" alt="">
+            </div>
+            <div class="bg-linear-to-r from-[#d9d9d9] to-[#ffffff] rounded-md"></div>
         </div>
 
         <div class="great-tea-right">
