--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -79,7 +79,7 @@
      </section>
 
      <!-- Great Tea Section -->
-     <section class="container mx-auto grid grid-cols-2 gap-8 mb-[90px]">
+     <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px]">
         <div class="great-tea-left gap-7.5 grid grid-cols-2 grid-rows-3">
             <div class="bg-linear-to-r from-[#ff0000] to-[#ff8938] opacity-10 rounded-md"></div>
             <div class=" row-span-2 flex justify-center items-center bg-[#e6a6231a] rounded-md">
