clients left column completed

--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -102,5 +102,15 @@
             <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
         </div>
      </section>
+
+     <!-- clients Section -->
+      <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
+        <div class="client-left text-white">
+            <h2 class="text-[45px] font-bold">Meet Our Super <br> Clients</h2>
+            <p class="mt-5 mb-7.5 font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="py-3 px-5 rounded-md font-semibold cursor-pointer bg-white "><span class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent">Show All</span></button>
+        </div>
+        <div class="clients-right"></div>
+      </section>
 </body>
 </html>
