--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -104,13 +104,39 @@
      </section>
 
      <!-- clients Section -->
-      <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
+      <section class="items-center container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-[100px] lg:gap-8 mb-[90px] rounded-xl bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
         <div class="client-left text-white">
             <h2 class="text-[45px] font-bold">Meet Our Super <br> Clients</h2>
             <p class="mt-5 mb-7.5 font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="py-3 px-5 rounded-md font-semibold cursor-pointer bg-white "><span class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent">Show All</span></button>
         </div>
-        <div class="clients-right"></div>
+        <div class="clients-right relative pl-[150px]">
+            <div class="bg-white rounded-lg p-10 w-[433px] absolute z-50 -left-[10px] top-[100px]">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="font-bold text-2xl">Ilham Yuda</h4>
+                <p class="text-[#777777]">Businessman</p>
+                <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                    <img src="./assets/images/client.png" alt="">
+                </div>
+                <img src="./assets/images/circles.png" alt="" class="absolute right-4 bottom-4">
+            </div>
+            <div class="bg-white rounded-lg p-10 w-[433px] relative mb-[50px] opacity-20">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="font-bold text-2xl">Ilham Yuda</h4>
+                <p class="text-[#777777]">Businessman</p>
+                <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                    <img src="./assets/images/client.png" alt="">
+                </div>
+            </div>
+            <div class="bg-white rounded-lg p-10 w-[433px] relative opacity-20">
+                <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="font-bold text-2xl">Ilham Yuda</h4>
+                <p class="text-[#777777]">Businessman</p>
+                <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                    <img src="./assets/images/client.png" alt="">
+                </div>
+            </div>
+        </div>
       </section>
 </body>
 </html>
