--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -111,7 +111,7 @@
             <button class="py-3 px-5 rounded-md font-semibold cursor-pointer bg-white "><span class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent">Show All</span></button>
         </div>
         <div class="clients-right relative pl-[150px]">
-            <div class="bg-white rounded-lg p-10 w-[433px] absolute z-50 -left-[10px] top-[100px]">
+            <div class="bg-white rounded-lg p-10 w-[350px] sm:w-[433px] absolute z-50 -left-[10px] top-[100px]">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                 <h4 class="font-bold text-2xl">Ilham Yuda</h4>
                 <p class="text-[#777777]">Businessman</p>
@@ -120,7 +120,7 @@
                 </div>
                 <img src="./assets/images/circles.png" alt="" class="absolute right-4 bottom-4">
             </div>
-            <div class="bg-white rounded-lg p-10 w-[433px] relative mb-[50px] opacity-20">
+            <div class="bg-white rounded-lg p-10 w-[350px] sm:w-[433px] relative mb-[50px] opacity-20">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                 <h4 class="font-bold text-2xl">Ilham Yuda</h4>
                 <p class="text-[#777777]">Businessman</p>
@@ -128,7 +128,7 @@
                     <img src="./assets/images/client.png" alt="">
                 </div>
             </div>
-            <div class="bg-white rounded-lg p-10 w-[433px] relative opacity-20">
+            <div class="bg-white rounded-lg p-10 w-[350px] sm:w-[433px] relative opacity-20">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                 <h4 class="font-bold text-2xl">Ilham Yuda</h4>
                 <p class="text-[#777777]">Businessman</p>
@@ -138,5 +138,57 @@
             </div>
         </div>
       </section>
+
+      <!-- Footer Section -->
+       <footer class=" bg-[#ffefe9] p-12 ">
+            <div  class="container mx-auto space-y-8">
+                <div class="flex justify-between">
+                    <img src="./assets/images/cup.png" alt="">
+                    <div class="flex gap-2.5 items-center">
+                        <p>Ready to get started?</p>
+                        <button class="py-3 px-5 rounded-md text-white font-semibold cursor-pointer bg-linear-to-r from-[#ff8938] to-[#ff0000]">Get Started</button>
+                    </div>
+                </div>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[25px] text-center md:text-left">
+                    <ul class="space-y-2">
+                        <li class="font-semibold text-xl">Quick Links</li>
+                        <li class="text-[#777777]"><a href="">Home</a></li>
+                        <li class="text-[#777777]"><a href="">About Us</a></li>
+                        <li class="text-[#777777]"><a href="">Insurance</a></li>
+                        <li class="text-[#777777]"><a href="">Privacy Policy</a></li>
+                    </ul>
+                    <ul class="space-y-2">
+                        <li class="font-semibold text-xl">Our Service</li>
+                        <li class="text-[#777777]">Life Insurance</li>
+                        <li class="text-[#777777]">Car Insurance</li>
+                        <li class="text-[#777777]">Health Insurance</li>
+                        <li class="text-[#777777]">House Insurance</li>
+                    </ul>
+
+                    <ul class="space-y-2">
+                        <li class="font-semibold text-xl">Help</li>
+                        <li class="text-[#777777]">FAQs</li>
+                        <li class="text-[#777777]">Contact Us</li>
+                    </ul>
+
+                    <div class="space-y-4">
+                        <h2 class="font-semibold text-3xl">Subscribe to our newsletter</h2>
+                        <div class="flex gap-4">
+                            <input type="text" placeholder="Email Address" class="border-b-2 pb-2 outline-none w-full">
+                            <button class="h-8 w-8 rounded-full text-white font-semibold cursor-pointer bg-linear-to-r from-[#ff8938] to-[#ff0000]"><span><i class="fa-solid fa-angle-right"></i></span></button>
+                        </div>
+
+                        <div class="flex gap-5">
+                            <span><i class="fa-brands fa-facebook-f"></i></span>
+                            <span><i class="fa-brands fa-twitter"></i></span>
+                            <span><i class="fa-brands fa-instagram"></i></span>
+                        </div>
+                    </div>
+
+                </div>
+                <h2 class="text-[#777777] text-center">© 2027 UIDesign.to - All rights reserved.</h2>
+            </div>
+       </footer>
 </body>
 </html>
