--- a/Milestone-4/Module-21/Tea-house/index.html
+++ b/Milestone-4/Module-21/Tea-house/index.html
@@ -110,8 +110,8 @@
             <p class="mt-5 mb-7.5 font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="py-3 px-5 rounded-md font-semibold cursor-pointer bg-white "><span class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent">Show All</span></button>
         </div>
-        <div class="clients-right relative pl-[150px]">
-            <div class="bg-white rounded-lg p-10 w-[350px] sm:w-[433px] absolute z-50 -left-[10px] top-[100px]">
+        <div class="clients-right relative pl-[65px] sm:pl-[150px]">
+            <div class="bg-white rounded-lg p-10 w-[350px] sm:w-[433px] absolute z-50 left-[40px] top-[100px]">
                 <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                 <h4 class="font-bold text-2xl">Ilham Yuda</h4>
                 <p class="text-[#777777]">Businessman</p>
