Home page started

--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is Home Page</title>
+    <title>Payoo | Home</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
 
     <!-- Tailwind + DaisyUI -->
      <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
@@ -21,10 +22,15 @@
             font-family: "Outfit", sans-serif;
         }
     </style>
+
+
 </head>
-<body>
-    <h1>
-        Home page
-    </h1>
+<body class="min-h-screen max-w-md bg-base-200 mx-auto">
+
+    
+
+
+    <script src="./script/home.js"></script>
+    
 </body>
 </html>
