--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -27,7 +27,7 @@
 </head>
 <body class="min-h-screen max-w-md bg-base-200 mx-auto">
 
-    <header class="border-b-2 border-gray-300">
+    <header class="border-b-2 border-gray-300 sticky top-0 bg-base-200 z-10">
         <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
             <div class="left flex gap-1 items-center">
                 <div class="logo w-[60px]">
@@ -96,13 +96,13 @@
 
                     <label class="label text-neutral font-bold">4 Digit Pin</label>
                     <input id="cashout-pin" maxlength="4" minlength="4" type="password" class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
-                    <button id="login-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
+                    <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
                 </fieldset>
             </div>
         </div>
     </section>
 
-
+    <script src="./script/cashout.js"></script>
     
 </body>
 </html>
