--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -102,6 +102,8 @@
         </div>
     </section>
 
+
+    <script src="./script/machine.js"></script>
     <script src="./script/cashout.js"></script>
     
 </body>
