--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -50,11 +50,11 @@
         <p class="text-neutral/50">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
     
         <div class="buttons grid grid-cols-3 gap-3">
-            <button class="btn flex-col h-full py-4 btn-soft btn-primary">
+            <button onclick="showOnly('add-money')" class="btn flex-col h-full py-4 btn-soft btn-primary">
                 <img src="./assets/opt-1.png" alt="">
                 <p>Add Money</p>
             </button>
-            <button class="btn flex-col h-full py-4 btn-soft btn-primary">
+            <button onclick="showOnly('cashout')" class="btn flex-col h-full py-4 btn-soft btn-primary">
                 <img src="./assets/opt-2.png" alt="">
                 <p>Cashout</p>
             </button>
@@ -137,6 +137,7 @@
 
 
     <script src="./script/machine.js"></script>
+    <script src="./script/addMoney.js"></script>
     <script src="./script/cashout.js"></script>
     
 </body>
