--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -58,7 +58,7 @@
                 <img src="./assets/opt-2.png" alt="">
                 <p>Cashout</p>
             </button>
-            <button class="btn flex-col h-full py-4 btn-soft btn-primary">
+            <button onclick="showOnly('transfer')" class="btn flex-col h-full py-4 btn-soft btn-primary">
                 <img src="./assets/opt-3.png" alt="">
                 <p>Transfer Money</p>
             </button>
@@ -130,6 +130,29 @@
                     <label class="label text-neutral font-bold">4 Digit Pin</label>
                     <input id="cashout-pin" maxlength="4" minlength="4" type="password" class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
                     <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full">Withdraw Money</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <section id="transfer" class="w-11/12 mx-auto py-5">
+        <h2 class="text-2xl font-bold mb-5">Transfer Money</h2>
+         <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-neutral font-bold">User Account Number</label>
+                    <input id="transfer-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 w-full" placeholder="Enter Transfer Account Number" />
+
+                    <br>
+
+                    <label class="label text-neutral font-bold">Amount</label>
+                    <input id="transfer-amount" type="number" class="input rounded-full bg-base-200 w-full" placeholder="Enter Amount to Transfer" />
+
+                    <br>
+
+                    <label class="label text-neutral font-bold">4 Digit Pin</label>
+                    <input id="transfer-pin" maxlength="4" minlength="4" type="password" class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+                    <button id="transfer-btn" class="btn btn-primary mt-4 rounded-full">Transfer Now</button>
                 </fieldset>
             </div>
         </div>
