--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -168,6 +168,7 @@
     <script src="./script/machine.js"></script>
     <script src="./script/addMoney.js"></script>
     <script src="./script/cashout.js"></script>
+    <script src="./script/transfer.js"></script>
     
 </body>
 </html>
