--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -135,7 +135,7 @@
         </div>
     </section>
 
-    <section id="transfer" class="w-11/12 mx-auto py-5">
+    <section id="transfer" class="w-11/12 mx-auto py-5 hidden">
         <h2 class="text-2xl font-bold mb-5">Transfer Money</h2>
          <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
@@ -154,6 +154,17 @@
                     <input id="transfer-pin" maxlength="4" minlength="4" type="password" class="input rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
                     <button id="transfer-btn" class="btn btn-primary mt-4 rounded-full">Transfer Now</button>
                 </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <section id="bonus" class="w-11/12 mx-auto py-5">
+        <h2 class="text-2xl font-bold mb-5">Get Bonus</h2>
+         <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-neutral font-bold">Enter Bonus Coupon</label>
+                    <input id="bonus-number" type="text" class="input rounded-full bg-base-200 w-full outline-none" placeholder="Enter your coupon" />
             </div>
         </div>
     </section>
