--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -170,6 +170,39 @@
         </div>
     </section>
 
+    <section id="pay-money" class="w-11/12 mx-auto py-5" >
+        <h2 class="text-2xl font-bold mb-5">Pay Bill</h2>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-neutral font-bold">Select To Pay</label>
+                    <select id="pay-money-bank" class="select w-full rounded-full bg-base-200 outline-none">
+                        <option disabled selected>Select a Bank</option>
+                        <option value="dbbl">DBBL</option>
+                        <option value="ibbl">IBBL</option>
+                        <option value="city-bank">City Bank</option>
+                    </select>
+
+                    <br>
+
+                    <label class="label text-neutral font-bold">Biller Account Number</label>
+                    <input id="pa-money-number" maxlength="11" minlength="11" type="text" class="input outline-none rounded-full bg-base-200 w-full" placeholder="Enter Bank Number" />
+
+                    <br>
+
+                    <label class="label text-neutral font-bold">Amount to Pay</label>
+                    <input id="pay-money-amount" type="number" class="input outline-none rounded-full bg-base-200 w-full" placeholder="Enter Pay Money Amount" />
+
+                    <br>
+
+                    <label class="label text-neutral font-bold">4 Digit Pin</label>
+                    <input id="pay-money-pin" maxlength="4" minlength="4" type="password" class="input outline-none rounded-full bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+                    <button id="pay-money-btn" class="btn btn-primary mt-4 rounded-full">Pay Now</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
     <section id="history" class="w-11/12 mx-auto py-5 ">
         <h2 class="text-2xl font-bold mb-5">Transactions</h2>
         <div id="history-container" class="space-y-5">
