Pay Bill visibility functionality added

--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -66,7 +66,7 @@
                 <img src="./assets/opt-4.png" alt="">
                 <p>Get Bonus</p>
             </button>
-            <button class="btn flex-col h-full py-4 btn-soft btn-primary">
+            <button onclick="showOnly('pay-money')" class="btn flex-col h-full py-4 btn-soft btn-primary">
                 <img src="./assets/opt-5.png" alt="">
                 <p>Pay Bill</p>
             </button>
