--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -186,7 +186,7 @@
                     <br>
 
                     <label class="label text-neutral font-bold">Biller Account Number</label>
-                    <input id="pa-money-number" maxlength="11" minlength="11" type="text" class="input outline-none rounded-full bg-base-200 w-full" placeholder="Enter Bank Number" />
+                    <input id="pay-money-number" maxlength="11" minlength="11" type="text" class="input outline-none rounded-full bg-base-200 w-full" placeholder="Enter Bank Number" />
 
                     <br>
 
@@ -215,6 +215,7 @@
     <script src="./script/cashout.js"></script>
     <script src="./script/transfer.js"></script>
     <script src="./script/bonus.js"></script>
+    <script src="./script/payBill.js"></script>
     
 </body>
 </html>
