--- a/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
+++ b/Milestone-4/Module-24 (Bank Project)/Payoo Bank Project/home.html
@@ -206,10 +206,10 @@
     <section id="history" class="w-11/12 mx-auto py-5 ">
         <div class="flex justify-between items-center">
             <h2 class="text-2xl font-bold mb-5">Transactions</h2>
-            <p class="text-neutral/50">View All</p>
+            <p class="text-neutral/50 cursor-pointer">View All</p>
         </div>
         <div id="history-container" class="space-y-5">
-            <div class="transaction-card p-5 bg-base-100 flex justify-between items-center">
+            <!-- <div class="transaction-card p-5 bg-base-100 flex justify-between items-center rounded-xl">
                 <div class="left flex flex-row gap-2">
                     <div class="w-11 p-2 bg-base-200 rounded-full flex justify-center items-center">
                         <img src="./assets/opt-1.png" alt="">
@@ -220,10 +220,9 @@
                     </div>
                 </div>
                 <div class="right">
-                    <img src="./assets/Frame.png" alt="">
+                    <img src="./assets/Frame.png" class="cursor-pointer" alt="">
                 </div>
-            </div>
-            
+            </div> -->  
         </div>
     </section>
 
