thrive functionality added

--- a/Milestone-4/Dom-conceputal-2/index.html
+++ b/Milestone-4/Dom-conceputal-2/index.html
@@ -40,6 +40,12 @@
             <button onclick="toggleStyle('struggling-filter-button')" class="bg-gray-300 px-5 py-2 cursor-pointer" id="struggling-filter-button">Struggling</button>
         </div>
 
+        <!-- Filtered cards -->
+
+        <section id="filtered-section" class="hidden">
+
+        </section>
+
         <section id="all-cards" class="space-y-7">
             <!-- Card-1 -->
              <div class="card flex justify-between border p-8">
