Struggling functionality added

--- a/Milestone-4/Dom-conceputal-2/index.html
+++ b/Milestone-4/Dom-conceputal-2/index.html
@@ -42,7 +42,7 @@
 
         <!-- Filtered cards -->
 
-        <section id="filtered-section" class="hidden">
+        <section id="filtered-section" class="hidden space-y-7">
 
         </section>
 
